--- a/ressource.qrc
+++ b/ressource.qrc
@@ -5,13 +5,16 @@
         <file>ressources/delivery-48.png</file>
         <file>ressources/log-out.svg</file>
         <file>ressources/logout-48.png</file>
-        <file>ressources/map.svg</file>
+        <file>ressources/maps.png</file>
+        <file>ressources/mqq.jpg</file>
+        <file>ressources/noti.png</file>
         <file>ressources/paper-48.png</file>
         <file>ressources/search-3-48.png</file>
-        <file>ressources/settings.svg</file>
         <file>ressources/settings-5-48.png</file>
+        <file>ressources/settings.svg</file>
+        <file>ressources/stat.jpg</file>
         <file>ressources/tool-box-48.png</file>
-        <file>ressources/user.svg</file>
         <file>ressources/user-48.png</file>
+        <file>ressources/user.svg</file>
     </qresource>
 </RCC>
